# email-triage

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak  LICENSE  QUICKSTART_DEPLOY.md  README.md  app.py  baseline_results.json  deploy.bat  deploy.sh  docker-compose.yml  fix_git.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  upload_to_hf.py
.github/workflows/: docker-build.yml
OneDrive/Documents/Desktop/Hackathon/email-triage-env/: Dockerfile  inference.py  requirements.txt
OneDrive/Documents/Desktop/Hackathon/email-triage-env/api/: main.py
api/: main.py
data/: emails.py
env/: environment.py  models.py
server/: __init__.py  app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
